# agent-monitor-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
app/: bootstrap.py  config.py  main.py  mcp_server.py
app/api/: status.py
app/dashboard/templates/: dashboard.html
app/models/: status.py
app/repositories/: status_repository.py
app/services/: status_service.py  telegram_notification_service.py
cli/: monitor.py
docs/plans/: 2026-03-20-001-feat-hybrid-fastapi-agent-monitor-plan.md  2026-03-20-002-feat-mvp-hardening-follow-up-plan.md
docs/solutions/database-issues/: agent-instance-identity-collision-20260320.md
docs/solutions/integration-issues/: telegram-completion-notifications-instance-aware-deduplication-20260321.md
prd/: init.md
tests/: conftest.py  test_cli_backoff.py  test_cli_integration.py  test_cli_view.py  test_dashboard.py  test_e2e.py  test_models.py  test_repository.py  test_service.py  test_sse.py  test_telegram_notification_service.py
