[project]
name = "agent-monitor-mcp"
version = "0.1.0"
description = "Foundation for Agent Monitor MCP (MVP)"
authors = [{ name = "Agent Monitor Team" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "fastmcp>=0.1.0",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
